adds xo linting

--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
 		"Themes"
 	],
 	"contributes": {
-		"themes": [
-			{
-				"label": "Shades Of Harmony",
-				"uiTheme": "vs-dark",
-				"path": "./themes/Shades Of Harmony-color-theme.json"
-			}
-		]
+		"themes": [{
+			"label": "Shades Of Harmony",
+			"uiTheme": "vs-dark",
+			"path": "./themes/Shades Of Harmony-color-theme.json"
+		}]
 	},
 	"devDependencies": {
 		"xo": "^0.18.2"
+	},
+	"scripts": {
+		"test": "xo --fix"
 	}
 }
