--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "shades-of-harmony",
 	"displayName": "Shades Of Harmony",
 	"description": "A simple color scheme crafted with love and ES6 in mind.",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"publisher": "vajahath-ahmed",
 	"engines": {
 		"vscode": "^1.0.0"
@@ -12,7 +12,8 @@
 	"bugs": {
 		"url": "https://github.com/vajahath/shades-of-harmony/issues"
 	},
-	"homepage": "https://github.com/vajahath/shades-of-harmony/blob/master/README.md",
+	"homepage":
+		"https://github.com/vajahath/shades-of-harmony/blob/master/README.md",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/vajahath/shades-of-harmony.git"
@@ -21,15 +22,15 @@
 		"color": "#0d0121",
 		"theme": "dark"
 	},
-	"categories": [
-		"Themes"
-	],
+	"categories": ["Themes"],
 	"contributes": {
-		"themes": [{
-			"label": "Shades Of Harmony",
-			"uiTheme": "vs-dark",
-			"path": "./themes/Shades Of Harmony-color-theme.json"
-		}]
+		"themes": [
+			{
+				"label": "Shades Of Harmony",
+				"uiTheme": "vs-dark",
+				"path": "./themes/Shades Of Harmony-color-theme.json"
+			}
+		]
 	},
 	"devDependencies": {
 		"xo": "^0.18.2"
