--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "shades-of-harmony",
 	"displayName": "Shades Of Harmony",
-	"description": "A simple color scheme crafted with love and ES6 in mind.",
+	"description": "A simple color theme crafted with love and ES6 in mind.",
 	"version": "1.1.0",
 	"publisher": "vajahath-ahmed",
 	"engines": {
